src/objects/Voicemail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Voicemails</relationshipLabel>
        <relationshipName>Voicemails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Object_Identifier__c</fullName>
        <label>Call Object Identifier</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Voicemails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Voicemails</relationshipLabel>
        <relationshipName>Voicemails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>Days Voicemail in New Status</description>
        <formula>IF(ISPICKVAL(Status__c,&quot;New&quot;), Round (Now() -CreatedDate, 0), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVM_Agent_ID__c</fullName>
        <label>NVM Agent ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <description>Response Time</description>
        <inlineHelpText>Response Time</inlineHelpText>
        <label>Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Voicemail_Link__c</fullName>
        <description>Displays a link to the call recording link in ContactWorld</description>
        <formula>IF(Call_Object_Identifier__c = &quot;&quot;, &quot;&quot;, HYPERLINK(&quot;https://cloud12.contact-world.net/callcentre/callAnalytics/Call/&quot; &amp; Call_Object_Identifier__c &amp; &quot;&quot;, &quot;Voicemail Recording&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click to access the voicemail recording.</inlineHelpText>
        <label>Voicemail Link</label>
        <type>Text</type>
    </fields>
    <label>Voicemail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>NVM_Agent_ID__c</columns>
        <columns>Voicemail_Link__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Client_Manager__c</columns>
        <columns>Call_Object_Identifier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Response_Time__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Todays</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>NVM_Agent_ID__c</columns>
        <columns>Voicemail_Link__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Client_Manager__c</columns>
        <columns>Call_Object_Identifier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays</label>
    </listViews>
    <listViews>
        <fullName>Yesterday</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>NVM_Agent_ID__c</columns>
        <columns>Voicemail_Link__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Client_Manager__c</columns>
        <columns>Call_Object_Identifier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Yesterday</label>
    </listViews>
    <nameField>
        <displayFormat>VM-{00000}</displayFormat>
        <label>Voicemail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voicemails</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>